--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 					</div>
 					<div class="keywords" style="color:#F3976C;">Agence web à Lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				</div>
-				<div class="row">
+				<!--<div class="row">
 					<div class="col-sm-4">
 						Partenaires
 							<ul>
@@ -263,7 +263,7 @@
 							<li><a class="liens" href="meilleursliens.com">meilleursliens.com</a></li>
 							<li><a class="liens" href="liensagogo.com">liensagogo.com</a></li>
 						
-						</ul>
+						</ul>-->
 					</div>
 				</div>
 			</div>
